@@ -19,6 +19,8 @@
     <script>
       INTERMediatorOnPage.doBeforeConstruct = function () {
         INTERMediatorLog.suppressDebugMessageOnPage = true
+        // INTERMediatorOnPage.authPanelExp = "説明です。"
+        INTERMediatorOnPage.authPanelExp2FA = "説明です。"
       }
     </script>
 </head>
